--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Reservations</string>
     <string name="test">You did it! Number of Guests: %d</string>
+
+    <string name="instructions">All you gotta do is press the buttons!</string>
 </resources>
