--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
 
     <string name="instructions">All you gotta do is press the buttons!</string>
     <string name="help_icon">Help</string>
+
+    <string name="about">You can make reservations in this here application!</string>
+    <string name="about_icon">About</string>
 </resources>
